<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.trivia.RiddleFragment">

        <TextView
            android:id="@+id/title_riddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="3dp"
            android:paddingTop="5dp"
            android:text="@string/fragtitle_riddle"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="58dp" />

        <TextView
            android:id="@+id/riddle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_riddle"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="#F8DAC0"
            android:gravity="center_horizontal"
            android:hint="@string/riddle_q"
            android:padding="5dp"
            android:paddingBottom="2dp"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/ans1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/riddle"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="#C0F8F0"
            android:gravity="center_horizontal"
            android:hint="@string/riddle_choice_1"
            android:padding="5dp"
            android:paddingBottom="2dp"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/ans2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ans1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:background="#282D9FA3"
            android:gravity="center_horizontal"
            android:hint="@string/riddle_choice_2"
            android:padding="5dp"
            android:paddingBottom="2dp"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/riddle_response"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/riddle_a"
            android:textSize="22sp"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:layout_below="@+id/ans2"
            android:background="@color/colorAnswer"
            android:paddingBottom="2dp" />

        <Button
            android:id="@+id/riddle_btn_resp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/riddle_response"
            android:layout_marginBottom="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:background="#00BCD4"
            android:fontFamily="casual"
            android:gravity="center_horizontal"
            android:hint="@string/riddle_resp"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="3dp"
            android:text="@string/riddle_resp"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="normal|bold" />



    </RelativeLayout>

</ScrollView>