<?xml version="1.0" encoding="utf-8"?>
<!-- Used by SendFeedback, this one has the hint layout. -->
<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/tg_logo2"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/feedback_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"/>


        <EditText
            android:id="@+id/word1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#CADBFD"
            android:fontFamily="casual"
            android:hint="@string/senders_name"
            android:textColor="#19214C"
            android:textStyle="normal|italic"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"/>


        <EditText
            android:id="@+id/word3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#FDCADE"
            android:fontFamily="casual"
            android:hint="@string/senders_riddle_q"
            android:textStyle="normal|italic"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"/>


        <EditText
            android:id="@+id/word2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorAnswer"
            android:hint="@string/senders_answer_1"
            android:fontFamily="casual"
            android:textStyle="normal|italic"
            android:inputType="textMultiLine"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"/>


        <EditText
            android:id="@+id/word4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#97E69A"
            android:fontFamily="casual"
            android:hint="@string/senders_answer_2"
            android:inputType="textMultiLine"
            android:textStyle="normal|italic"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"/>


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/senders_correct"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"/>

        <Spinner
            android:id="@+id/answer_spinner"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="#FFFF8D"
            android:hint="@string/answer1_text"
            android:textSize="30sp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"/>

        <RelativeLayout
            android:id="@+id/buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/mashIt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="@string/send"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="normal|bold" />

            <Button
                android:id="@+id/clearIt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/mashIt"
                android:fontFamily="casual"
                android:text="Reset"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="normal|bold" />

            <Button
                android:id="@+id/cxlIt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/clearIt"
                android:fontFamily="casual"
                android:text="Cancel"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:textStyle="normal|bold" />


        </RelativeLayout>


    </LinearLayout>
</ScrollView>