<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_riddle">

    <fragment
        android:id="@+id/navigation_riddle"
        android:name="com.techgalavant.techforumdemo.ui.riddle.RiddleFragment"
        android:label="@string/title_riddle"
        tools:layout="@layout/fragment_riddle">
        <action
            android:id="@+id/action_navigation_riddle_to_trivia"
            app:destination="@id/navigation_trivia" />
        <action
            android:id="@+id/action_navigation_riddle_to_sponsor"
            app:destination="@id/navigation_sponsor" />
    </fragment>

    <fragment
        android:id="@+id/navigation_trivia"
        android:name="com.techgalavant.techforumdemo.ui.trivia.TriviaFragment"
        android:label="@string/title_trivia"
        tools:layout="@layout/fragment_trivia">
        <action
            android:id="@+id/action_navigation_trivia_to_sponsor"
            app:destination="@id/navigation_sponsor" />
        <action
            android:id="@+id/action_navigation_trivia_to_riddle"
            app:destination="@id/navigation_riddle" />
    </fragment>

    <fragment
        android:id="@+id/navigation_sponsor"
        android:name="com.techgalavant.techforumdemo.ui.sponsor.SponsorFragment"
        android:label="@string/title_sponsor"
        tools:layout="@layout/fragment_sponsor">
        <action
            android:id="@+id/action_navigation_sponsor_to_riddle"
            app:destination="@id/navigation_riddle" />
        <action
            android:id="@+id/action_navigation_sponsor_to_trivia"
            app:destination="@id/navigation_trivia" />
    </fragment>
</navigation>