<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.trivia.SponsorFragment">

        <TextView
            android:id="@+id/title_sponsor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="3dp"
            android:paddingTop="5dp"
            android:text="@string/fragtitle_sponsor"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="58dp" />

        <ImageView
                android:id="@+id/sponsor_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:contentDescription="@string/sponsor_imag_hint"
                android:layout_below="@+id/title_sponsor"
                android:src="@drawable/tg_logo2"
                android:padding="5dp"/>

        <TextView
            android:id="@+id/sponsor_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sponsor_photo"
            android:layout_centerHorizontal="true"
            android:paddingBottom="3dp"
            android:paddingTop="5dp"
            android:text="@string/sponsor_thanks"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="155dp"
            tools:layout_editor_absoluteY="58dp" />


    </RelativeLayout>

</ScrollView>